updated authentication feature admin and auth, added some extra classes, added bootsrapping package to help create and load dummy data into app at application startup

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+
+		<!-- for loading fake users TO REMOVE AFTER-->
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
